:package: Chore: 임시 라우칭 및 기타 스타일 변경

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Linked Out Admin Page</title>
+    <meta property="og:title" content="Linked Out Admin Page" />
+    <meta
+      property="og:description"
+      content="에세이 플랫폼 Linked Out 관리자 페이지"
+    />
+    <meta property="og:image" content="/favicon.ico" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
