feat: preconnect 설정 추가로 API 요청 속도 최적화

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <meta property="og:image" content="/favicon.ico" />
     <meta property="og:type" content="website" />
+    <link rel="preconnect" href="https://linkedoutapp.com" />
   </head>
   <body>
     <div id="root"></div>
